<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="13dp" >

    <TextView
        android:text="@string/register_title"
        android:textSize="37dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp" />

    <EditText
        android:hint="@string/edt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerUsername" />

    <TextView
        android:text="@string/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <EditText
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerPassword" />

    <TextView
        android:text="@string/lbl_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <EditText
        android:hint="@string/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/registerEmail"/>


    <TextView
        android:text="@string/label_hphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <EditText
        android:hint="@string/edt_hphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/registerPhonenum"/>

    <TextView
        android:text="@string/label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <EditText
        android:hint="@string/edt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/registerAddress"/>

    <Button
        android:text="@string/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="storeUserInfo" />


</LinearLayout>