<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#49dd7f"
    tools:context="ca.uoit.msohail.charityapp.MainActivity">

    <TextView
        android:text="@string/welcome_title"
        android:textSize="37dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true" />


    <Button
        android:text="@string/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:onClick="openRegisterPage"
        android:id="@+id/button2" />


    <Button
        android:text="@string/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:onClick="loginVerify"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:layout_marginBottom="77dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_loginPassword"
        android:hint="@string/edt_password"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginBottom="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_loginEmail"
        android:hint="@string/edt_email"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/edt_loginUsername"
        android:layout_alignLeft="@+id/edt_loginUsername"
        android:layout_alignStart="@+id/edt_loginUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_loginUsername"
        android:hint="@string/edt_username"
        android:layout_above="@+id/edt_loginPassword"
        android:layout_alignLeft="@+id/edt_loginPassword"
        android:layout_alignStart="@+id/edt_loginPassword"
        android:layout_marginBottom="12dp" />

</RelativeLayout>
