<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideInset"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:addStatesFromChildren="false">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewPostTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="13dp"
        android:id="@+id/textView3" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edt_searchItems"
        android:inputType="textAutoComplete"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_alignTop="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/edt_searchItems" />

    <Button
        android:text="@string/btn_search"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:textAlignment="center"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="searchAds" />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button8"
        android:layout_marginTop="42dp"
        android:numColumns="auto_fit"
        android:columnWidth="167dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:id="@+id/adsGridView" >
    </GridView>

    <Button
        android:text="@string/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="445dp"
        android:layout_marginLeft="133dp"
        android:onClick="returnToOptions" />

    <TextView
        android:text=" "
        android:textColor="#0909EB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_suggestions"
        android:layout_below="@+id/button8"
        android:layout_alignLeft="@+id/edt_searchItems"
        android:layout_alignStart="@+id/edt_searchItems"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:textSize="17sp" />


</RelativeLayout>
</ScrollView>